--- a/Practice/Views/Teachers/SaveTheme.cshtml
+++ b/Practice/Views/Teachers/SaveTheme.cshtml
@@ -1,4 +1,4 @@
-﻿@model CreateThemeViewModel
+﻿@model ThemeViewModel
 
 
 <div class="col-sm-12 col-xl-6">
@@ -20,6 +20,5 @@
                 <button class="btn btn-sm btn-primary">Сохранить</button>
                 <button class="btn btn-sm btn-primary" asp-controller="Teachers" asp-action="TeachersList">Отменить</button>
             </form>
-            
     </div>
 </div>
