--- a/Practice/Views/Shared/Partial/PartialModalWindow.cshtml
+++ b/Practice/Views/Shared/Partial/PartialModalWindow.cshtml
@@ -10,10 +10,10 @@
 
 			</div>
 
-			<div class="modal-footer">
+			@*<div class="modal-footer">
 				<button type="button" class="btn btn-success rounded-pill m-2" id="saveButton">Сохранить</button>
 				<button type="button" class="btn btn-primary rounded-pill m-2" data-bs-dismiss="modal">Отменить</button>
-			</div>
+			</div>*@
 		</div>
 	</div>
 </div>
