--- a/Practice/Views/Shared/Partial/ScriptPartial.cshtml
+++ b/Practice/Views/Shared/Partial/ScriptPartial.cshtml
@@ -13,3 +13,5 @@
 <script src="~/js/main.js"></script>
 <!-- Bundle -->
 <script src="~/js/Modal.js"></script>
+<script src="~/js/CreateReport.js"></script>
+<script src="~/js/ChangeVisibility.js"></script>
