--- a/SDLab3/SaveWindows/SaveTeacherWindos.xaml
+++ b/SDLab3/SaveWindows/SaveTeacherWindos.xaml
@@ -1,22 +1,23 @@
-﻿<Window x:Class="SDLab3.AddWindows.AddTeacherWindow"
+﻿<Window x:Class="SDLab3.SaveWindows.SaveTeacherWindos"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:SDLab3.AddWindows"
+        xmlns:local="clr-namespace:SDLab3.SaveWindows"
         mc:Ignorable="d"
-        Title="Добавить преподавателя" Height="175" Width="320" ResizeMode="NoResize">
+        Title="Управление записью о преподавателе" Height="175" Width="320"
+        ResizeMode="NoResize">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="25"/>
             <RowDefinition Height="35"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <Label Grid.Row="0" Content="Введите данные о преподавателе:"/>
+        <Label x:Name="InfoLabel" Grid.Row="0" Content="Введите данные о преподавателе:"/>
         <DockPanel Grid.Row="1" Width="Auto" >
             <Label Content="Инициалы преподавателя:" VerticalContentAlignment="Center"/>
             <TextBox x:Name="WorkerInitials" Width="140" HorizontalAlignment="Right" VerticalContentAlignment="Center" Margin="0, 0, 5, 0"/>
         </DockPanel>
-        <Button Grid.Row="2" Height="30" Width="80" VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="0, 0, 10, 10" Content="Добавить" Click="AddTeacher_Click"/>
+        <Button Grid.Row="2" Height="30" Width="80" VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="0, 0, 10, 10" Content="Сохранить" Click="AddTeacher_Click"/>
     </Grid>
 </Window>
