--- a/Practice/Views/Deadlines/DeadlinesList.cshtml
+++ b/Practice/Views/Deadlines/DeadlinesList.cshtml
@@ -183,7 +183,23 @@
     <div class="bg-secondary text-center rounded p-4">
         <<h2>Управление консультациями</h2>
 
-        <div class="table-responsive pt-4" id="DeadlinesTable">
+        <div class="col-sm6 w-50">
+            <label for="floatingSelect">Команда:</label>
+            <select class="form-select" id="ConsultationFilter" aria-label="Floating label select example">
+            <option selected data-selectedValue="Нет">Нет</option>
+                @{
+                    foreach (var theme in Model.getTeacher.Themes)
+                    {
+                        if (theme.Teams.FirstOrDefault() is null) continue;
+                        <option data-selectedValue="@theme.Teams.FirstOrDefault().Id">
+                            @theme.ThemeFormulation
+                        </option>
+                    }
+                }
+            </select>
+        </div>
+
+        <div class="table-responsive pt-4" id="ConsultationsTable">
             <table class="table text-start align-middle table-bordered table-hover mb-0" >
                 <thead>
                     <tr class="text-white">
@@ -209,7 +225,7 @@
                                 List<Consultation> consultations = deadline.Consultations.ToList();
                                 if (consultations.Count == 0)
                                 {
-                                    <tr>
+                                    <tr data-selectedValue="@team.Id">
                                         <td>@deadline.DeadLineDate</td>
                                         <td>@deadline.Commentary</td>
                                         <td></td>
@@ -220,7 +236,7 @@
                                 }
                                 Consultation firstConsultation = consultations.FirstOrDefault();
                                 consultations.Remove(firstConsultation);
-                                <tr>
+                                <tr data-selectedValue="@team.Id">
                                     <td>@deadline.DeadLineDate</td>
                                     <td>@deadline.Commentary</td>
                                     <td>@firstConsultation.Date</td>
@@ -254,7 +270,7 @@
 
                                 foreach (var consultation in consultations)
                                 {
-                                    <tr>
+                                    <tr data-selectedValue="@team.Id">
                                         <td></td>
                                         <td></td>
                                         <td>@consultation.Date</td>
@@ -284,7 +300,7 @@
                                         </td>
                                     </tr>
                                 }
-                                <tr>
+                                <tr data-selectedValue="@team.Id">
                                     <td></td>
                                     <td></td>
                                     <td></td>
